Fix layout shifting around when recording
Prevent wrapping in Length and Position boxes in Sound Recorder.

--- a/programs/sound-recorder/src/sound-recorder.css
+++ b/programs/sound-recorder/src/sound-recorder.css
@@ -41,6 +41,7 @@ body,
 	height: 100%;
 	box-sizing: border-box;
 	display: table;
+	white-space: nowrap;
 }
 .position .center-me,
 .length .center-me {
